ADD: Option 支持通过字典创建 （注：非 通过实现 Decodable 协议方法，因为这样会要求 Delegate也必须遵守 Decodable 协议）

--- a/Example/Example/WebPages/Beautify.html
+++ b/Example/Example/WebPages/Beautify.html
@@ -10,7 +10,11 @@
             height: 100%;
         }
     </style>
+    <script>
+        function faceppHandler(error, resp) {
 
+        }
+    </script>
     <head>
 
     <body>
