ADD: 3D 人脸扩展 / 例子

--- a/Example/Example/WebPages/Beautify.html
+++ b/Example/Example/WebPages/Beautify.html
@@ -93,6 +93,10 @@
                 alt="手势识别" />
         </div>
         <div>
+            <h1>3D 人脸建模</h1>
+            <button type="button" onclick="webkit.messageHandlers.facemodel.postMessage('')">查看</button>
+        </div>
+        <div>
             <h1>Message Handler</h1>
             <img src="http://5b0988e595225.cdn.sohucs.com/images/20170807/aea9cf16c3eb49349f5c56e8de583240.jpeg"/>
             姓名： <input type="text" id="name" value=""><br/>
